<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    tools:context=".MainActivity" >

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal" >
        <ImageView
            android:id="@+id/sync"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:src="@android:drawable/ic_menu_rotate"/>
        <TextView
            android:id="@+id/infoip"
            android:layout_toRightOf="@id/sync"
            android:layout_centerVertical="true"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content" />
    </LinearLayout>
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal" >
        <Button
            android:id="@+id/button1"
            android:layout_height="60dp"
            android:layout_width="60dp"
            android:paddingLeft="10dp"
            android:paddingRight="10dp"
            android:text="1" />
        <Button
            android:id="@+id/button2"
            android:layout_height="60dp"
            android:layout_width="60dp"
            android:paddingLeft="10dp"
            android:paddingRight="10dp"
            android:text="2" />
        <ImageView
            android:id="@+id/LEDred"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:paddingLeft="10dp"
            android:paddingRight="10dp"
            android:paddingTop="15dp"
            android:paddingBottom="15dp"
            android:src="@drawable/red_off" />
        <ImageView
            android:id="@+id/LEDgreen"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:paddingLeft="10dp"
            android:paddingRight="10dp"
            android:paddingTop="15dp"
            android:paddingBottom="15dp"
            android:src="@drawable/green_off" />
        <ImageView
            android:id="@+id/LEDblue"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:paddingLeft="10dp"
            android:paddingRight="10dp"
            android:paddingTop="15dp"
            android:paddingBottom="15dp"
            android:src="@drawable/blue_off" />
    </LinearLayout>
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal" >
        <RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:paddingLeft="10dp"
            android:paddingRight="10dp"
            android:paddingTop="15dp"
            android:paddingBottom="15dp" >
            <ImageView
                android:id="@+id/touchpad"
                android:layout_width="480px"
                android:layout_height="480px"
                android:background="@color/touchpad" />
            <ImageView
                android:id="@+id/positioner"
                android:layout_width="8dp"
                android:layout_height="8dp"
                android:src="@drawable/positioner" />
        </RelativeLayout>
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical" >
            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal" >
                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/text_prompt"
                    />
                <TextView
                    android:id="@+id/text"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content" />
            </LinearLayout>
            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal" >
                <TextView
                    android:id="@+id/in_indicator_prompt"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/in_prompt"
                    />
                <ImageView
                    android:id="@+id/in_indicator"
                    android:layout_width="8dp"
                    android:layout_height="8dp"
                    android:alpha="0"
                    android:layout_toRightOf="@+id/in_indicator_prompt"
                    android:layout_gravity="center"
                    android:src="@drawable/in_indicator" />
            </LinearLayout>
            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal" >
                <TextView
                    android:id="@+id/out_indicator_prompt"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/out_prompt"
                    />
                <ImageView
                    android:id="@+id/out_indicator"
                    android:layout_width="8dp"
                    android:layout_height="8dp"
                    android:alpha="0"
                    android:layout_toRightOf="@+id/out_indicator_prompt"
                    android:layout_gravity="center"
                    android:src="@drawable/out_indicator" />
            </LinearLayout>
        </LinearLayout>
    </LinearLayout>
    <ScrollView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content">
        <HorizontalScrollView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content">
            <TableLayout
                android:id="@+id/sensor_table"
                android:layout_height="wrap_content"
                android:layout_width="match_parent"
                android:stretchColumns="*">
                <TableRow
                    android:id="@+id/tableRow1"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content">
                    <LinearLayout
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:background="@drawable/cell_shape"
                        android:orientation="horizontal">
                        <TextView
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:gravity="left"
                            android:padding="5px"
                            android:text="@string/number">
                        </TextView>
                    </LinearLayout>
                    <LinearLayout
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:background="@drawable/cell_shape"
                        android:orientation="horizontal">
                        <TextView
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:gravity="left"
                            android:padding="5px"
                            android:text="@string/type">
                        </TextView>
                    </LinearLayout>
                    <LinearLayout
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:background="@drawable/cell_shape"
                        android:orientation="horizontal">
                        <TextView
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:gravity="left"
                            android:padding="5px"
                            android:text="@string/description">
                        </TextView>
                    </LinearLayout>
                </TableRow>
            </TableLayout>
        </HorizontalScrollView>
    </ScrollView>
</LinearLayout>
